...
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        tools:ignore="UnknownId">
        <FrameLayout
            android:id="@+id/dasboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >


        </FrameLayout>
    </ScrollView>
...
